--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "prueba-frontend",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -42,8 +43,10 @@
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
+    "axios": "^1.3.3",
     "eslint": "^8.34.0",
     "eslint-plugin-react": "^7.32.2",
+    "styled-components": "^5.3.6",
     "typescript": "^4.9.5"
   }
 }
