--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,40 +1,66 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": [
-        "eslint:recommended",
-        "plugin:react/recommended",
-        "plugin:@typescript-eslint/recommended"
+  "root": true,
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": "./tsconfig.json",
+    "tsconfigRootDir": ".",
+    "sourceType": "module",
+    "ecmaVersion": 2020
+  },
+  "plugins": ["@typescript-eslint", "react", "react-hooks", "unused-imports"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:react-hooks/recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/recommended-requiring-type-checking",
+    "plugin:prettier/recommended",
+    "@tanstack/eslint-plugin-query"
+  ],
+  "rules": {
+    /* 🚫 Prohibir any explícito */
+    "@typescript-eslint/no-explicit-any": "error",
+
+    /* 🚫 Bloquea usos inseguros asociados a any implícito */
+    "@typescript-eslint/no-unsafe-assignment": "error",
+    "@typescript-eslint/no-unsafe-call": "error",
+    "@typescript-eslint/no-unsafe-member-access": "error",
+    "@typescript-eslint/no-unsafe-return": "error",
+
+    /* 🚨 Detectar cualquier parámetro sin tipo explícito */
+    "@typescript-eslint/typedef": ["error", { "parameter": true }],
+
+    /* 💡 Opcional: exigir tipo en retorno de funciones públicas */
+    "@typescript-eslint/explicit-module-boundary-types": [
+      "error",
+      {
+        "allowArgumentsExplicitlyTypedAsAny": false,
+        "allowTypedFunctionExpressions": true
+      }
     ],
-    "overrides": [
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react",
-        "@typescript-eslint"
-    ],
-    "rules": {
-        "indent": [
-            "error",
-            "tab"
-        ],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
-        "quotes": [
-            "error",
-            "single"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ]
+
+    /* ♻️ Eliminación automática de imports sin usar */
+    "unused-imports/no-unused-imports": "error",
+
+    /* 🔍 Variables no usadas */
+    "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
+
+    /* 🎨 Buenas prácticas de código */
+    "eqeqeq": ["error", "always"],
+    "curly": "error",
+    "prefer-const": "error",
+    "no-console": "warn",
+
+    /* 🧹 Estilo de código (Prettier se ocupa del resto) */
+    "semi": ["error", "always"],
+    "quotes": ["error", "single"],
+    "indent": ["error", 2],
+    "no-trailing-spaces": "error",
+    "eol-last": ["error", "always"]
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
     }
+  }
 }
